--- a/base.css
+++ b/base.css
@@ -373,7 +373,7 @@ ul.ow_regular li {
 	padding: 12px 0px 0px 10px;
 }
 .ow_logo_wrap a {
-	font-family: 'ubuntubold', "Trebuchet MS", "Helvetica CY", sans-serif;
+	font-family: 'ubuntubold', Verdana, Geneva, sans-serif;
 	font-size: 13px;
 	text-transform: uppercase;
 	color: #626060; /** OW_Control type:color, key:logoColor, section:1. General Settings, label: 4. Logo text color **/
@@ -866,7 +866,7 @@ input[type=button]{
     font-weight: normal;
     cursor: pointer;
     height: 30px;
-	font-family: 'ubuntubold', "Trebuchet MS", "Helvetica CY", sans-serif;
+	font-family: 'ubuntubold', Verdana, Geneva, sans-serif;
 	text-transform: uppercase;
 	font-size: 13px;
 	border: none;
@@ -1755,7 +1755,7 @@ body textarea.ow_newsfeed_status_input.invitation {
 	line-height: 16px;	
     overflow: hidden;
 	font-weight: normal;
-	font-family: 'ubuntubold', "Trebuchet MS", "Helvetica CY", sans-serif;
+	font-family: 'ubuntubold', Verdana, Geneva, sans-serif;
 }
 
 .ow_box_cap {
@@ -2714,7 +2714,7 @@ span.ow_icon{
     width: 994px;
 }
 .ow_main_menu{
-	font-family: 'ubuntubold', "Trebuchet MS", "Helvetica CY", sans-serif;
+	font-family: 'ubuntubold', Verdana, Geneva, sans-serif;
    	display: table-cell;
 	text-align: center;
 	vertical-align: middle;
@@ -2806,7 +2806,7 @@ html[xmlns] .ow_main_menu.clearfix {
 
 .ow_content_menu{
 	font-size: 0px;
-	font-family: 'ubuntubold', "Trebuchet MS", "Helvetica CY", sans-serif;
+	font-family: 'ubuntubold', Verdana, Geneva, sans-serif;
 	text-transform: uppercase;
 	font-weight: normal;
 }
@@ -3731,7 +3731,7 @@ body .ow_avatar_console .avatar_console_label {
 
 /* ---- Photo styles ---- */
 .ow_photo_dragndrop {
-    font-family: 'ubuntubold',"Trebuchet MS","Helvetica CY",sans-serif;
+    font-family: 'ubuntubold',Verdana, Geneva, sans-serif;
     text-transform: uppercase;
     color: #666;
     background-color: #fff9ec;
@@ -4740,7 +4740,7 @@ div.admin_menu_cont .menu_item .menu_mobile{
 	display: block;
     text-shadow: #fafafa 0px 1px 0;
 	text-transform:uppercase;
-	font-family: 'ubuntubold', "Trebuchet MS", "Helvetica CY", sans-serif;
+	font-family: 'ubuntubold', Verdana, Geneva, sans-serif;
 	padding: 29px 0px;
 }
 
@@ -5431,7 +5431,7 @@ body .floatbox_canvas .floatbox_container {
 	padding: 8px 12px 0px;
 	float: left;
 	font-weight: normal;
-	font-family: 'ubuntubold', "Trebuchet MS", "Helvetica CY", sans-serif;	
+	font-family: 'ubuntubold', Verdana, Geneva, sans-serif;	
 }
 .floatbox_header .ow_box_cap_icons {
 	float: right;
@@ -6039,7 +6039,7 @@ body .ow_table_2 tr.ow_tr_titles th:last-child, body .ow_table_1 tr.ow_tr_titles
 }
 .ow_tr_top_button div {
     color: #626060;
-    font-family: "ubuntubold","Trebuchet MS","Helvetica CY",sans-serif;
+    font-family: "ubuntubold",Verdana, Geneva, sans-serif;
     font-size: 13px;
     font-weight: normal;
     text-transform: uppercase;
@@ -6201,7 +6201,7 @@ body .ow_table_2 tr.ow_tr_titles th:last-child, body .ow_table_1 tr.ow_tr_titles
 .ow_open_match_section {
 	font-size: 13px;
 	text-transform: uppercase;
-	font-family: 'ubuntubold', "Trebuchet MS", "Helvetica CY", sans-serif;
+	font-family: 'ubuntubold', Verdana, Geneva, sans-serif;
 	padding-left: 20px;
 	background: url(images/plus.png) no-repeat 0px 50%;
 	margin-bottom: 22px;
